syntax = "proto3";

import "nanopb.proto";
import "proto/BasicTypes.proto";
import "proto/CryptoCreate.proto";
import "proto/Transfer.proto";
import "proto/TokenAssociate.proto";
import "proto/TokenMint.proto";
import "proto/TokenBurn.proto";

message HederaTransactionBody {
    HederaTransactionID transactionID = 1;
    uint64 transactionFee = 3;
    string memo = 6 [(nanopb).max_size = 100];

    oneof data {
        HederaCryptoCreateTransactionBody cryptoCreateAccount = 11;
        HederaCryptoTransferTransactionBody cryptoTransfer = 14;
        HederaTokenAssociateTransactionBody tokenAssociate = 40;
        HederaTokenMintTransactionBody tokenMint = 37;
        HederaTokenBurnTransactionBody tokenBurn = 38;
    }
}
